--- a/imageviewer/src/main/res/values/strings.xml
+++ b/imageviewer/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="library_name">StfalconImageViewer</string>
+    <string name="library_name">ImageViewer</string>
 </resources>
